fix(client): use HttpURLConnection for 100% Android runtime compatibility (minSdk 21+)